.provarCaches/00D5f000005vwGkEAI/objects/rstk__socondeveff__c.object
<CustomObject>
    <description>socondeveff__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(TEXT(CreatedDate) &amp; rstk__socondeveff_chgcomments__c, 70)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_activateby__c</fullName>
        <label>Activate By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Device is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_beginhold__c</fullName>
        <label>Interim Hold Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_billhold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_billstatus__c</fullName>
        <label>Device Billing Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_chgcomments__c</fullName>
        <label>Change Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_chgreason__c</fullName>
        <label>Device Management Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_enddate__c</fullName>
        <label>Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_endhold__c</fullName>
        <label>Interim Hold End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_socondev__c</fullName>
        <label>Contract Serialized Device</label>
        <referenceTo>rstk__socondev__c</referenceTo>
        <relationshipName>socondeveffs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_sorma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Number</label>
        <referenceTo>rstk__sorma__c</referenceTo>
        <relationshipName>socondeveffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_startdate__c</fullName>
        <label>Coverage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_termdate__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Device Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_transdate__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Device Transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondeveff_transto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferred To</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Covered Devices – History</relationshipLabel>
        <relationshipName>socondeveffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Covered Devices – History</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__details</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Covered Devices – History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>